--- a/webapp/view/GoodsIssueProdList.view.xml
+++ b/webapp/view/GoodsIssueProdList.view.xml
@@ -70,10 +70,10 @@ controllerName="dyflex.mm.s4cloud.warehouse.controller.GoodsIssueProdList"
 					<Column minScreenWidth="Tablet" demandPopin="true">
 						<Text text="Storage Location" />
 					</Column>
-					<Column minScreenWidth="Tablet" demandPopin="true">
+					<Column minScreenWidth="Tablet" demandPopin="true" hAlign="End">
 						<Text text="Required Qty" />
 					</Column>
-					<Column>
+					<Column hAlign="End">
 						<Text text="Open Qty" />
 					</Column>
 				</columns>
@@ -91,7 +91,7 @@ controllerName="dyflex.mm.s4cloud.warehouse.controller.GoodsIssueProdList"
 							<ObjectIdentifier title="{customResvItemSrv>Plant}" text="{customResvItemSrv>PlantName}" />
 							<ObjectIdentifier title="{customResvItemSrv>StorageLocation}" text="{customResvItemSrv>StorageLocationName}" />
 							<ObjectNumber
-								number="{customResvItemSrv>ResvnItmRequiredQtyInBaseUnit}"
+								number="{ path: 'customResvItemSrv>ResvnItmRequiredQtyInBaseUnit', formatter: '.formatter.numberUnit' }"
 								unit="{customResvItemSrv>BaseUnit}" />
 							<ObjectNumber
 								number="{
