--- a/webapp/view/GoodsIssueProdItems.fragment.xml
+++ b/webapp/view/GoodsIssueProdItems.fragment.xml
@@ -58,7 +58,7 @@
 						titlePress="onMaterialLinkPress(${createModel>Material})" />
 					
 					<ObjectNumber
-						number="{createModel>TempOpenQty}"
+						number="{ path: 'createModel>TempOpenQty', formatter: '.formatter.numberUnit' }"
 						unit="{createModel>EntryUnit}" />
 						
 					<Input
