--- a/webapp/view/GoodsIssueResvItems.fragment.xml
+++ b/webapp/view/GoodsIssueResvItems.fragment.xml
@@ -55,7 +55,7 @@
 						titlePress="onMaterialLinkPress(${createModel>Material})" />
 					
 					<ObjectNumber
-						number="{createModel>TempOpenQty}"
+						number="{ path: 'createModel>TempOpenQty', formatter: '.formatter.numberUnit' }"
 						unit="{createModel>EntryUnit}" />
 						
 					<Input
