--- a/webapp/view/GoodsIssueResvItems.fragment.xml
+++ b/webapp/view/GoodsIssueResvItems.fragment.xml
@@ -22,7 +22,7 @@
 				<Text text="Item"/>
 			</Column>
 			<Column>
-				<Text text="Component"/>
+				<Text text="Material"/>
 			</Column>
 			<Column minScreenWidth="Tablet" demandPopin="true">
 				<Text text="Stock On Hand"/>
