Add Sold To Party in Detail and filter List to Open deliveries only

--- a/webapp/view/PickingDeliveryDetail.view.xml
+++ b/webapp/view/PickingDeliveryDetail.view.xml
@@ -20,7 +20,7 @@
 		</semantic:titleHeading>
 		
 		<semantic:headerContent>
-			<ObjectAttribute title="Ship-to Party" text="yyyyyyyy xxxxxxxxxxxx" />
+			<ObjectAttribute title="Ship-to Party" text="{customerModel>/d/CustomerName} ({customerModel>/d/Customer})" />
 		</semantic:headerContent>
 
 		<semantic:content>
