--- a/webapp/view/PickingDeliveryList.view.xml
+++ b/webapp/view/PickingDeliveryList.view.xml
@@ -26,7 +26,9 @@
 						{ path: 'ListHeader', descending: false, group: true },
 						{ path: 'DeliveryDocumentItem', descending: false }
 					],
-					groupHeaderFactory: '.onGroupHeader'
+					filters : [
+						{ path : 'OverallGoodsMovementStatus', operator : 'NE', value1 : 'C' }
+					]
 				}"
 				noDataText="{listView>/tableNoDataText}"
 				busyIndicatorDelay="{listView>/tableBusyDelay}"
