--- a/webapp/view/GoodsIssueResvList.view.xml
+++ b/webapp/view/GoodsIssueResvList.view.xml
@@ -81,7 +81,7 @@ controllerName="dyflex.mm.s4cloud.warehouse.controller.GoodsIssueResvList"
 						<Text text="Storage Bin" />
 					</Column>
 					<Column minScreenWidth="Tablet" demandPopin="true" hAlign="End">
-						<Text text="Stock On Hand" />
+						<Text text="Unrestricted Stock" />
 					</Column>
 					<Column hAlign="End">
 						<Text text="Open Qty" />
