Changes for Covalent •	NEW MENU: Reservations – Picking (copy of menu item Goods Issue Reservations): 1)	Add filters for: 1.	Reservation number 2.	Plant 3.	Storage location 4.	EAM work order 2)	Add fields in list display: 1.	Plant 2.	Storage location 3.	EAM work order Add new Staging Area field. On post the staging area is set and the status set to Staged.
New menu item - Staged Reservation. Includes a button which changes the staging status to Handed out to Requestor.

Addition of filter items in the Stock Overview screen

--- a/webapp/view/MainList.view.xml
+++ b/webapp/view/MainList.view.xml
@@ -88,6 +88,24 @@
 						iconDensityAware="false"
 						iconInset="false" />
 						
+					<StandardListItem
+						title="Picking"
+						description="Reservation"
+						press="onPickingResvPress"
+						type="Active"
+						icon="sap-icon://action"
+						iconDensityAware="false"
+						iconInset="false" />
+						
+					<StandardListItem
+						title="Staged"
+						description="Reservation"
+						press="onStagedResvPress"
+						type="Active"
+						icon="sap-icon://action"
+						iconDensityAware="false"
+						iconInset="false" />
+						
 				</items>
 			</List>
 		</semantic:content>
