Minor bug fixes to the filters

--- a/webapp/view/PickingResvHeader.fragment.xml
+++ b/webapp/view/PickingResvHeader.fragment.xml
@@ -54,18 +54,16 @@
 				
 				<Label text="Header Text" />
 				<Input value="{createModel>/MaterialDocumentHeaderText}" />
-				
-				<Label text="Staging Area" />
-				<Input 	id="idStageArea" fieldGroupIds="idStagingAreaGrp" value="{createModel>/TempStagingArea}"/>
-				
+			
+				<Label text="Staging Area" />	
+				<Input 	id="idStageArea" fieldGroupIds="idStagingAreaGrp" value="{createModel>/TempStagingArea}" />
 				<ndc:BarcodeScannerButton
-					width="10px"
+					width="10%"
 					scanSuccess="onStagingAreaScanSuccess"
 					scanFail="onScanError"
 					dialogTitle="Barcode Scanner" >
 				</ndc:BarcodeScannerButton>
 			
-				
 			</f:content>
 		</f:SimpleForm>
 	</Panel>
